[gtk2] Mail/News window shutdown when click "File" twice. Bug 140867. patch by robin.lu@sun.com, r=blizzard.  Note: this is NOT for defautl build.